--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,3 +2,21 @@
  *= require_tree .
  *= require_self
  */
+
+html, body {
+  width: 320px;
+  padding: 0;
+}
+
+#debug_console {
+  font-size: 30px;
+  background: #eee;
+  padding: 10px;
+  margin: 30px 0;
+  width: 100%;
+}
+
+.hide {
+  display: none;
+}
+
