--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="xben">
 <head>
   <title>B3</title>
   <%= stylesheet_link_tag 'application', media: 'all' %>
