--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html ng-app="xben">
 <head>
-  <title>B3</title>
-  <%= stylesheet_link_tag 'application', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
   <%= csrf_meta_tags %>
+
+  <title>B3</title>
+
+  <%= stylesheet_link_tag 'application', media: 'all' %>
 </head>
 <body>
 
-<%= yield %>
+  <%= yield %>
+
+  <%= javascript_include_tag 'application' %>
 
 </body>
 </html>
