--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -1,5 +1,5 @@
 <div ng-controller="MainController">
-  <div ng-if="current_user">
+  <div>
     <img ng-src="{{ current_user.avatar.thumbnail_url }}" width="26" height="26">
     {{ current_user.name }}
   </div>
