--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,11 +9,219 @@ html {
 }
 
 body {
+  color: #333;
   width: 320px;
   padding: 0;
   margin: 0 auto;
   text-align: left;
-  background: #fff;
+  background: #FAFAFA;
   -webkit-overflow-scrolling: touch;
+  font-family:'Lucida Grande','Hiragino Kaku Gothic ProN',
+ Meiryo, sans-serif;
 }
 
+button {
+  -webkit-appearance: none;
+}
+
+/* ex */
+
+.ex-boxSizing {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
+.ex-clearfix{
+  display: inline-block;
+}
+
+.ex-clearfix:after{
+  content: ".";
+  display: block;
+  height: 0;
+  font-size:0;
+  clear: both;
+  visibility:hidden;
+}
+
+/* style */
+
+.wrap {
+  min-height: 468px;
+}
+
+.header {
+  text-align: center;
+  padding: 7px;
+  color: #333;
+  background: whitesmoke;
+  border-top: 1px solid white;
+  border-bottom: 2px solid #D8D8D8;
+  margin-bottom: 10px;
+  box-shadow: 0 1px 1px rgba(0,0,0,.4);
+  position: relative;
+}
+
+.header .logo {
+  width: 100px;
+  margin: 0 auto;
+}
+
+.header .backBtn {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 52px;
+  margin: 0;
+  padding: 0;
+}
+
+.header .backBtn img {
+  width: 100%;
+}
+
+.contetsHead {
+  width: 94%;
+  margin: 7px auto 0 auto;
+  text-align: center;
+  box-shadow: 0 1px 0 white;
+  box-shadow: 0 1px 0 white;
+  border-bottom: 1px solid #C4C4C4;
+}
+
+.contetsHead img {
+  width: 280px;
+}
+
+.currentUserProfile {
+  background: white;
+  padding: 7px;
+  width: 94%;
+  border: 1px solid lightgray;
+  border-radius: 5px;
+  margin: 0 auto;
+  display: block;
+}
+
+.currentUserProfile .currentUserName {
+  float: left;
+  padding-top: 10px;
+  padding-left: 10px;
+  font-weight: bold;
+}
+
+.currentUserProfile .currentUserThumb {
+  float: left;
+}
+
+.memberContent {
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  background: white;
+  width: 300px;
+  margin: 10px auto;
+  border: 1px solid #444;
+}
+.memberContent .userProfile {
+  display: block;
+  padding: 7px;
+  background: #444;
+  border-radius: 4px 4px 0 0;
+  -webkit-border-radius: 4px 4px 0 0;
+}
+.memberContent .userThumb {
+  width: 30px;
+  display: inline-block;
+}
+.memberContent .userThumb img {
+  border: 1px solid #333;
+}
+
+.memberContent .userName {
+  vertical-align: 8px;
+  padding-left: 7px;
+  color: white;
+}
+
+.memberContent .foodThumb {
+  border: 1px solid lightgray;
+  width: 280px;
+  margin: 0 auto;
+}
+.memberContent .foodThumb img {
+  width: 100%;
+}
+.memberContent .userFoodName {
+  padding: 10px;
+}
+.memberContent .userFoodThumb {
+  width: 100%;
+  text-align: center;
+  background: rgb(238, 238, 238);
+}
+.memberContent .userFoodThumb img {
+  width: 70%;
+}
+.memberContent .userFoodDesc {
+  padding: 10px;
+  font-size: 12px;
+  color: gray;
+}
+
+.dealIcon {
+  text-align: center;
+  margin: -5px auto;
+}
+
+.dealIcon img {
+  width: 25px;
+}
+
+.footerBoard {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  height: 110px;
+  background: rgba(0,0,0,.7);
+}
+.footerBoard button {
+  width: 200px;
+  padding: 0;
+  height: 90px;
+  margin: 0;
+  background: none;
+  border: 0;
+  font-size: 0;
+  line-height: 0;
+  overflow: visible;
+  cursor: pointer;
+  margin: 10px 19%;
+  background: rgb(255, 255, 255);
+  border-radius: 20px;
+  border-bottom: 4px solid #A29B9B;
+}
+.footerBoard img {
+  width: 90px;
+  margin: 10px 35%;
+}
+
+/* ng-carrousel */
+
+.rn-carousel-indicator {
+  background-color: #FAFAFA;
+  margin-top: 10px;
+}
+.rn-carousel-control.rn-carousel-control-next:before {
+  display: none;
+}
+.rn-carousel-control.rn-carousel-control-prev:before {
+  display: none;
+}
+.rn-carousel-indicator .active {
+  color: rgb(255, 112, 0);
+}
+.rn-carousel-indicator span {
+  color:#444;
+  font-size: 12px;
+}
