--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -72,7 +72,7 @@
     </div>
 
     <div ng-if="isState('done')" class="footerBoard">
-      <button>
+      <button ng-click="like(selected.id)">
         <img src="/assets/umaineBtn.png" alt="">
       </button>
     </div>
