--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -2,7 +2,7 @@
 
   <div class="header ex-boxSizing">
     <p class="logo"><img src="/assets/logo.png" alt="X-Ben" width="100%"></p>
-    <p ng-if="selected" class="backBtn"><img src="/assets/backBtn.png" alt=""></p>
+    <p ng-if="!isState('initial')" ng-click="back()" class="backBtn"><img src="/assets/backBtn.png" alt=""></p>
   </div>
 
   <div ng-if="isState('initial')">
