--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,7 @@ body {
   -webkit-overflow-scrolling: touch;
   font-family:'Lucida Grande','Hiragino Kaku Gothic ProN',
  Meiryo, sans-serif;
+  overflow: hidden;
 }
 
 button {
@@ -55,12 +56,32 @@ button {
   padding: 7px;
   color: #333;
   background: whitesmoke;
-  border-top: 1px solid white;
   border-bottom: 2px solid #D8D8D8;
   margin-bottom: 10px;
-  box-shadow: 0 1px 1px rgba(0,0,0,.4);
+  /*box-shadow: 0 1px 1px rgba(0,0,0,.4);*/
   position: relative;
 }
+.header .alert {
+  position: absolute;
+  top: -44px;
+  left: 0;
+  width: 100%;
+  height: 44px;
+  padding-top: 7px;
+  background: rgb(45, 133, 202);
+  font-size: 14px;
+  color: white;
+  z-index: 100;
+  /*-webkit-animation: anime1 1s 1s ease infinite alternate;*/
+  -webkit-animation: anime1 5s 1s ease;
+  -webkit-animation-fill-mode:forwards;
+}
+  @-webkit-keyframes anime1 {
+      0% { top: -44px;opacity: 1;}
+      10% { top: 0;opacity: 1;}
+      90% { top: 0;opacity: 1;}
+      100% { top: -44px; opacity: 0;}
+  }
 
 .header .logo {
   width: 100px;
@@ -151,7 +172,7 @@ button {
   width: 100%;
 }
 .memberContent .userFoodName {
-  padding: 10px;
+  padding: 10px 10px 0 10px;
 }
 .memberContent .userFoodThumb {
   width: 100%;
@@ -185,24 +206,6 @@ button {
   background: rgba(0,0,0,.7);
   margin-left: -160px;
 }
-.footerBoard button {
-  width: 200px;
-  padding: 0;
-  height: 90px;
-  margin: 0;
-  background: none;
-  border: 0;
-  font-size: 0;
-  line-height: 0;
-  overflow: visible;
-  position: absolute;
-  top: 10px;
-  left: 50%;
-  margin-left: -100px;
-  background: rgb(255, 255, 255);
-  border-radius: 20px;
-  border-bottom: 4px solid #A29B9B;
-}
 .footerBoard img {
   width: 90px;
   position: absolute;
@@ -210,6 +213,67 @@ button {
   left: 50%;
   margin-left: -45px;
 }
+.umaineBg {
+  position: fixed;
+  width: 320px;
+  bottom: -100%;
+  height: 110px;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(100%,rgba(255,255,255,1)));
+  height: 100%;
+  -webkit-animation: anime2 0.5s 1s ease;
+  -webkit-animation-fill-mode:forwards;
+}
+  @-webkit-keyframes anime2 {
+      0% { bottom: -100%;opacity: 1;}
+      100% { bottom: 0%;opacity: 1;}
+  }
+.umaineFood {
+  width: 200px;
+  height: 200px;
+  background-size: cover;
+  border-radius: 200px;
+  margin: 10% auto 0 auto;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  margin-left: -100px;
+}
+.umaineFood span {
+  position: absolute;
+  top: 45px;
+  left: 50%;
+  font-size: 120px;
+  font-weight: bold;
+  margin-left: -80px;
+  color: rgba(255,255,255,.8);
+}
+
+.umaineBg button {
+  width: 200px;
+  padding: 0;
+  height: 200px;
+  margin: 0;
+  background: none;
+  border: 0;
+  font-size: 0;
+  line-height: 0;
+  overflow: visible;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  margin-left: -100px;
+  background: rgb(255, 255, 255);
+  border-radius: 20px;
+  border-bottom: 4px solid #A29B9B;
+}
+.umaineBg button img {
+  width: 70px;
+  position: absolute;
+  top: 10px;
+  left: 50%;
+  margin-left: -35px;
+}
+
 
 /* ng-carrousel */
 
