--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -27,7 +27,7 @@
         <!-- user list wrap -->
         <div class="memberContent">
 
-          <p ng-class="{near: food.user.is_near}" ng-show="food.user.is_near">near</p>
+          <span ng-class="{near: food.user.is_near}" ng-show="food.user.is_near">!</span>
 
           <p class="userProfile ex-clearfix color-{{ [null, 'a', 'b'][food.user.id] }}">
             <span class="userThumb"><img ng-src="{{ food.user.avatar.thumbnail_url }}" width="34" height="34"></span>
@@ -51,7 +51,7 @@
       <li ng-repeat="food in deals track by $index">
         <div ng-if="food">
           <div class="memberContent">
-            <p class="userProfile ex-clearfix">
+            <p class="userProfile ex-clearfix color-{{ [null, 'a', 'b'][food.user.id] }}">
               <span class="userThumb"><img ng-src="{{ food.user.avatar.thumbnail_url }}" width="34" height="34"></span>
               <span class="userName">{{ food.user.name }}</span>
             </p>
@@ -68,90 +68,11 @@
       </li>
     </ul>
 
-    <!-- <div ng-if="isState('ejected')" class="removeLoading footerBoard">
+    <div ng-if="isState('ejected')" class="removeLoading footerBoard">
       <img src="/assets/loading_anime02.gif" alt="取り外し中">
-    </div> -->
+    </div>
 
-    <!-- <div ng-if="isState('done')" class="footerBoard"> -->
-
-    <style>
-    .umaineFood {
-      width: 240px;
-      height: 240px;
-      background-size: cover;
-      border-radius: 200px;
-      margin: 0 auto 0 auto;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      margin-left: -120px;
-      margin-top: -120px;
-    }
-    .umaineFood .umaineIcon {
-      width: 150px;
-      margin: auto;
-      line-height: 12;
-    }
-    .umaineFood .umaineIcon img {
-      width: 100%;
-    }
-    .liked {
-      top: 51%;
-    }
-
-    .umainePop_prototype {
-      width: 140px;
-      height: 40px;
-      padding-top: 10px;
-      background: white;
-      padding: 5px;
-      border-radius: 30px;
-      position: absolute;
-      text-align: center;
-    }
-    .ins1 {
-      top: 30%;
-      left: 12%;
-      z-index: 100;
-      opacity: 0;
-    }
-    .ins2 {
-      top: 20%;
-      left: 50%;
-      z-index: 110;
-      opacity: 0;
-    }
-    .ins3 {
-      top: 10%;
-      left: 7%;
-      z-index: 120;
-      opacity: 0;
-    }
-    .ins1_anime {
-      -webkit-animation: popAnime1 1s ease;
-    }
-      @-webkit-keyframes popAnime1 {
-          0% { opacity: 0;}
-          50% { opacity: 1;}
-          100% { opacity: 0; }
-      }
-    .ins2_anime {
-      -webkit-animation: popAnime2 1s ease;
-    }
-      @-webkit-keyframes popAnime2 {
-          0% { opacity: 0;}
-          50% { opacity: 1;}
-          100% { opacity: 0; }
-      }
-    .ins3_anime {
-      -webkit-animation: popAnime3 1s ease;
-    }
-      @-webkit-keyframes popAnime3 {
-          0% { opacity: 0;}
-          50% { opacity: 1;}
-          100% { opacity: 0; }
-    }
-    </style>
+    <div ng-if="isState('done')" class="footerBoard">
 
     <div class="umaineBg">
 
@@ -161,7 +82,7 @@
 
       <ul>
       <li ng-repeat="food in deals track by $index">
-        <!-- <span ng-show="$index == 0">{{food.likes_count}}</span> -->
+        <span class="likeCount" ng-show="$index == 0">{{food.likes_count}}</span>
         <div ng-click="like(selected.id)" ng-class="{liked: flag}" class="umaineFood" style="background:url('{{ food.thumbnail.medium_url }}');background-size:cover;"><p class="umaineIcon"><img src="/assets/umaineBtn.png" alt=""></p></div>
       </li>
     </ul>
