--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -72,9 +72,7 @@
       <img src="/assets/loading_anime02.gif" alt="取り外し中">
     </div>
 
-    <!-- <div ng-if="isState('done')" class="footerBoard"> -->
-
-    <div class="umaineBg">
+    <div class="umaineBg" ng-if="isState('done')">
 
       <p ng-class="{ins1_anime: pop >= 0}" class="umainePop_prototype ins1"><img src="/assets/umaine.png" width="100"></p>
       <p ng-class="{ins2_anime: pop >= 1}" class="umainePop_prototype ins2"><img src="/assets/umaine.png" width="100"></p>
