--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
   <%= csrf_meta_tags %>
 
-  <title>B3</title>
+  <title>XBen App Prototype</title>
 
   <%= stylesheet_link_tag 'application', media: 'all' %>
 </head>
